# BashAgent

./: .gitignore  Cargo.toml  README.md  bash-agent.proto  build.rs  default.nix  flake.nix
sandbox/: configuration.nix  default.nix  flake-home.nix  flake-system.nix  home.nix  pipe-read-invoc-notify.patch  pty-read-invoc-notify.patch  setup.py
src/: anthropic.rs  bash-agent.proto  bash.rs  client.rs  common.rs  main.rs  openai.rs  server.rs  text_editor.rs
src/resources/: bash-description.txt  bash-schema.json  system-prompt.txt  text_editor-description.txt  text_editor-schema.json
