[package]
name = "computer-use"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
eventsource-stream = "0.2.3"
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["stream"] }
russh = "0.46.0"
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["fs", "io-std", "macros", "rt-multi-thread", "signal"] }
