[package]
name = "bash-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bash-agent-server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive"] }
eventsource-stream = "0.2.3"
futures = "0.3.31"
lazy_static = "1.5.0"
nix = { version = "0.29.0", features = ["fs", "ioctl"] }
prost = "0.13.4"
prost-types = "0.13.4"
reqwest = { version = "0.12.9", features = ["stream"] }
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1" , features = ["macros", "process", "rt-multi-thread", "signal"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
prost-types = "0.13.4"
